[metadata]
name = jvmc_utilities
description = Utility functions and classes for the jVMC package.
url = https://github.com/laurinbrunner/jvmc_utilities
author = Laurin Brunner
author_email = laurin.brunner@physik.uni-augsburg.de
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
project_urls =
    Source = https://github.com/laurinbrunner/jvmc_utilities

[options]
packages = find:
install_requires =
    jVMC==1.2.2
    jax>=0.4.1,<=0.4.11
    jaxlib>=0.4.1,<=0.4.11
    setuptools==61.2.0
    setuptools-scm[toml]==4
    numpy>=1.23.1
    tqdm>=4.64.0
    matplotlib>=3.5.2
    pytest>=7.1.0
    clu>=0.0.7
    tensorflow==2.9.1
    h5py>=3.7.0
    ml_dtypes==0.2.0
    scipy<=1.10.1
    optax==0.1.5
python_requires = >=3.8
include_package_data = True
platforms = any

